# bilal

./: .gitignore  Dockerfile  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
src/bilal/: __init__.py  azan_args.py  azan_clock.py  azan_config.py  azan_loader.py  azan_loader_calc.py  azan_loader_local.py  azan_local_discovery.py  azan_player.py  azan_scheduler.py  command_server.py  praytimes.py
src/bilal/www/: index.html  scripts.js  settings.html  settings.js  styles.css
tests/: test_azan_config.py  test_azan_loader.py  test_azan_loader_calc.py  test_praytimes.py
